@@ -10,7 +10,7 @@ sub pull {
     my $config = $f->{'cif'};
     my $feed = $f->{'feed'};
     my ($client,$err) = CIF::Client->new({config => $config});
-    return($err,undef) if($err);
+    return($err) if($err);
     my $content = $client->GET($feed);
     my $code = $client->responseCode();
     return('request failed: '.$code,undef) unless($code eq '200');
